# personal-site

./: .gitignore  CONTENT_GATHERING.md  PHASE1_SUMMARY.md  PHASE2_COMPLETION.md  PHASE2_PROGRESS.md  PHASE3A_TESTING.md  PHASE3B_PROGRESS.md  PHASE3_PLANNING.md  PLANNING.md  README.md  package-lock.json  package.json  personal-site.code-workspace  run_tests.py  test_phase3_features.py  test_section_visibility.py  verify_fixes.py
backend/: alembic.ini  env.example  init_admin.py  main.py  path_setup.py  pyproject.toml  requirements.txt  setup.py  test_all_features.py  test_imports.py
backend/alembic/: env.py
backend/alembic/versions/: fe6c0d8a5bd4_initial_database_schema.py
backend/app/: __init__.py  config.py
backend/app/api/: auth.py  blog.py  contact.py  files.py  newsletter.py  sections.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/models/: __init__.py  admin.py  blog.py  contact.py  database.py  file.py  newsletter.py  sections.py
backend/app/schemas/: __init__.py  auth.py  blog.py  contact.py  file.py  newsletter.py  sections.py
backend/app/utils/: auth.py
docs/: DEVELOPMENT.md  IMG_4648.HEIC
frontend/: Procfile  index.html  package-lock.json  package.json  tailwind.config.js  test_admin_interface.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AdminLayout.tsx  BlogEditor.tsx  Footer.tsx  Header.test.tsx  Header.tsx  Layout.tsx  ProtectedRoute.tsx  SectionWrapper.tsx
frontend/src/contexts/: SectionVisibilityContext.tsx
frontend/src/hooks/: useDarkMode.ts
frontend/src/pages/: About.tsx  (+16 more)
